--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start":"node ./server/ws/index.js "
+    "start":"node ./server/socket/index.js "
   },
   "repository": {
     "type": "git",
