--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start":"node ./server/socket/index.js "
+    "start": "node ./server/socket/index.js "
   },
   "repository": {
     "type": "git",
@@ -16,5 +16,8 @@
   "bugs": {
     "url": "https://github.com/amschel99/Websockets/issues"
   },
-  "homepage": "https://github.com/amschel99/Websockets#readme"
+  "homepage": "https://github.com/amschel99/Websockets#readme",
+  "dependencies": {
+    "ws": "^8.8.1"
+  }
 }
